Fix screen flicker issue with film grain effect.

--- a/assets/web/game.scss
+++ b/assets/web/game.scss
@@ -249,11 +249,11 @@ button.form-control {
     background: url('../images/filmnoise.png');
     content: "";
     display: block;
-    height: 300%;
-    left: -100%;
+    height: 400%;
+    left: -200%;
     position: absolute;
-    top: -100%;
-    width: 300%;
+    top: -200%;
+    width: 400%;
     z-index: 1;
   }
 }
